AT 01.01 | Freestyle project > View project page >Disable/Enable project > Navigate to change page > Delete project